vbnc/vbnc/vbnc/tests/Errors/30311-23.vb
Class T
    Const M_Decimal As Decimal = #1/1/2008#
End Class